--- a/ManagerUser/appsettings.json
+++ b/ManagerUser/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ManageUserDB": "Server=WINAPSFYMRBRFG1\\SQLEXPRESS;Database=UserManagerAPI;Integrated Security=True;;Uid=auth_windows"
+  }
 }
